@@ -13,6 +13,8 @@
 package net.sf.oval.integration.spring;
 
 import net.sf.oval.Check;
+import net.sf.oval.configuration.CheckInitializationListener;
+import net.sf.oval.constraint.CheckWithCheck;
 
 /**
  * Injects Spring bean dependencies into {@link Check} instances.
@@ -22,8 +24,19 @@ import net.sf.oval.Check;
  * Requires the {@link SpringInjector} be setup correctly.
  *
  * @author Sebastian Thomschke
- * @deprecated Use {@link SpringCheckInitializationListener} instead
  */
-@Deprecated
-public class BeanInjectingCheckInitializationListener extends SpringCheckInitializationListener
-{}
+public class SpringCheckInitializationListener implements CheckInitializationListener
+{
+	public static final SpringCheckInitializationListener INSTANCE = new SpringCheckInitializationListener();
+
+	public void onCheckInitialized(final Check check)
+	{
+		SpringInjector.get().inject(check);
+
+		if (check instanceof CheckWithCheck)
+		{
+			final CheckWithCheck checkWith = (CheckWithCheck) check;
+			SpringInjector.get().inject(checkWith.getSimpleCheck());
+		}
+	}
+}
