@@ -35,7 +35,6 @@ import org.springframework.util.Assert;
  *
  * @author Sebastian Thomschke
  */
-@SuppressWarnings("javadoc")
 @Component
 public class SpringInjector
 {
